--- a/ToDo/ToDo.csproj
+++ b/ToDo/ToDo.csproj
@@ -104,5 +104,8 @@
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Images\waterfall-bg.jpeg" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
